Bug 211791 - AMD CPU /proc/cpuinfo reported max potential boost frequency instead of actual operating frequency
Summary: AMD CPU /proc/cpuinfo reported max potential boost frequency instead of actua...
Status: RESOLVED CODE_FIX
Alias: None
Product: Power Management
Classification: Unclassified
Component: cpufreq (show other bugs)
Hardware: x86-64 Linux
: P1 high
Assignee: linux-pm@vger.kernel.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-16 01:41 UTC by Rin Cat
Modified: 2022-05-06 19:10 UTC (History)
5 users (show)

See Also:
Kernel Version: 5.11.0
Subsystem:
Regression: No
Bisected commit-id:


Attachments
/proc/cpuinfo log (35.44 KB, text/plain)
2021-02-16 01:41 UTC, Rin Cat
Details
lscpu (2.55 KB, text/plain)
2021-02-16 01:41 UTC, Rin Cat
Details

Description Rin Cat 2021-02-16 01:41:11 UTC
Created attachment 295305 [details]
/proc/cpuinfo log

Overview:
    The /proc/cpuinfo reported wrong operating frequency, where my AMD 3900X shows over 6 GHz when idle.
    This may be caused by the 5.11 AMD CPU frequency / CPPC fix.

Steps to Reproduce: 
    cat /proc/cpuinfo
    or
    lscpu

Actual Results:
    Reported operating frequency far beyond actual. (Over 6 GHz)

Expected Results:
    Reported actual operating frequency.

Build Date & Hardware:
    Build 2021-02-15 on Gentoo
    CPU: AMD Ryzen 9 3900X 12-Core Processor
    AMD AGESA: ComboAM4PIV2 1.2.0.0
    CPPC: enabled

Additional Information:
    /sys/devices/system/cpu/cpu*/cpufreq/scaling_cur_freq reported correct frequency.
Comment 1 Rin Cat 2021-02-16 01:41:49 UTC
Created attachment 295307 [details]
lscpu
Comment 2 Joshua Hall 2021-03-13 10:41:20 UTC
I'm still having an issue with frequencies being reported incorrectly. Here's a thread for reference: https://bbs.archlinux.org/viewtopic.php?pid=1961500#p1961500

I've updated to kernel version 5.11.6. If I watch /proc/cpuinfo, that seems to be reporting somewhat accurately now. However, lscpu and most everything else is still reporting inaccurately.

~ → uname -r
5.11.6-arch1-1
~ → lscpu | grep MHz
CPU MHz:                         3400.000
CPU max MHz:                     7228.3198
CPU min MHz:                     2200.0000
~ → geekbench --sysinfo | grep -E "Processor Information|Name|Base Frequency"
Processor Information
  Name                          AMD Ryzen 9 5950X
  Base Frequency                6.92 GHz
Comment 4 Huang Rui 2021-04-20 10:20:41 UTC
Hi all,

This patch should fix the issue:

https://lore.kernel.org/r/20210420080943.1045886-1-ray.huang@amd.com

Thanks,
Ray

On Tue, Apr 20, 2021 at 08:55:00AM +0000, bugzilla-daemon@bugzilla.kernel.org wrote:
>
> https://nam11.safelinks.protection.outlook.com/?url=https%3A%2F%2Fbugzilla.kernel.org%2Fshow_bug.cgi%3Fid%3D211791&data=04%7C01%7Cray.huang%40amd.com%7Cc3e664b79fec434b1a2208d903d9fc2c%7C3dd8961fe4884e608e11a82d994e183d%7C0%7C0%7C637545057044777992%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C1000&sdata=eoZS70ZYQ7Rvh7XUNBL%2FPi4pxALBsbOyic6QnhOL2Xg%3D&reserved=0
> 
> Eugenia Campos (rizwanali.462371@gmail.com) changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>                  CC|                            |rizwanali.462371@gmail.com
> 
> --- Comment #3 from Eugenia Campos (rizwanali.462371@gmail.com) ---
> Maxilla and all joyful end is placed for the founding items for the citizens.
> The show of the jump and
> https://nam11.safelinks.protection.outlook.com/?url=https%3A%2F%2Fwww.essaygeeks.co.uk%2Fwrite-my-essay%2F&data=04%7C01%7Cray.huang%40amd.com%7Cc3e664b79fec434b1a2208d903d9fc2c%7C3dd8961fe4884e608e11a82d994e183d%7C0%7C0%7C637545057044777992%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C1000&sdata=NOvSMR08NNdIOik9fqcy2PE4IP8LDYQOB4SZfjx3Nlo%3D&reserved=0
> is
> shifted for the takes. The mode is pushed for the hope of the shows for
> humans.
> 
> -- 
> You may reply to this email to add a comment.
> 
> You are receiving this mail because:
> You are the assignee for the bug.

Note You need to log in before you can comment on or make changes to this bug.